--- a/input.css
+++ b/input.css
@@ -110,20 +110,20 @@
           font-size: 14px;
         }
         a {
-          @apply no-underline text-black hover:underline hover:text-gray-800;
+            @apply no-underline text-black hover:underline hover:text-gray-800;
         }
 
         label {
-            @apply block text-sm text-black;
+            @apply block mb-2 text-gray-900 text-sm font-bold py-2 uppercase;
         }
         input {
-            @apply bg-white border border-gray-400 rounded-sm focus:ring-black p-2;
+            @apply bg-white border border-gray-400 rounded-sm focus:ring-black p-3;
         }
         textarea {
-            @apply bg-white border border-gray-400 rounded-sm focus:ring-black p-2;
+            @apply bg-white border border-gray-400 rounded-sm focus:ring-black p-3;
         }
         details summary::-webkit-details-marker {
-          display: none;
+            display: none;
         }
     }
 
