--- a/appview/pages/templates/repo/issues/issue.html
+++ b/appview/pages/templates/repo/issues/issue.html
@@ -5,7 +5,7 @@
 
 {{ define "repoContent" }}
     <header>
-      <p class="text-2xl font-bold">
+      <p class="text-2xl">
       {{ .Issue.Title }}
       <span class="text-gray-500">#{{ .Issue.IssueId }}</span>
       </p>
@@ -18,7 +18,7 @@
         {{ $icon = "circle-dot" }}
     {{ end }}
 
-    <section>
+    <section class="mt-2">
         <div class="inline-flex items-center gap-2">
             <div id="state"
                 class="inline-flex items-center rounded px-3 py-1 {{ $bgColor }} text-sm">
