--- a/appview/pages/templates/settings.html
+++ b/appview/pages/templates/settings.html
@@ -32,13 +32,22 @@
 <section class="rounded bg-white drop-shadow-sm px-6 py-4 mb-6 w-full lg:w-fit">
   <div id="key-list" class="flex flex-col gap-6 mb-8">
     {{ range .PubKeys }}
-    <div>
-      <div class="inline-flex items-center gap-4">
-        <i class="w-3 h-3" data-lucide="key"></i>
-        <p class="font-bold">{{ .Name }} </p>
-        <p class="text-sm text-gray-500">added {{ .Created | timeFmt }}</p>
+    <div class="flex justify-between items-center gap-4">
+      <div>
+        <div class="inline-flex items-center gap-4">
+          <i class="w-3 h-3" data-lucide="key"></i>
+          <p class="font-bold">{{ .Name }}</p>
+          <p class="text-sm text-gray-500">added {{ .Created | timeFmt }}</p>
+        </div>
+        <code class="block break-all text-sm break-all text-gray-500">{{ .Key }}</code>
       </div>
-      <code class="block text-sm break-all text-gray-500">{{ .Key }}</code>
+      <button
+        class="btn text-red-500 hover:text-red-700"
+        title="Delete key"
+        hx-delete="/settings/keys?name={{urlquery .Name}}&rkey={{urlquery .Rkey}}&key={{urlquery .Key}}"
+        hx-confirm="Are you sure you wish to delete the key '{{ .Name }}'?">
+        <i class="w-5 h-5" data-lucide="trash-2"></i>
+      </button>
     </div>
     {{ end }}
   </div>
