more progress on patches
- fix up filters
- fix missing icons bug
- fix missing close button

--- a/appview/pages/templates/repo/pulls/new.html
+++ b/appview/pages/templates/repo/pulls/new.html
@@ -15,7 +15,7 @@
                 <p class="text-gray-500">
                     The branch you want to make your change against.
                 </p>
-                <select class="p-1 border border-gray-200 bg-white">
+                <select name="targetBranch" class="p-1 border border-gray-200 bg-white">
                   <option disabled selected>Select a branch</option>
                   {{ range .Branches }}
                   <option
