appview: merge pulls and associated ui changes

--- a/appview/pages/templates/layouts/repobase.html
+++ b/appview/pages/templates/layouts/repobase.html
@@ -38,7 +38,7 @@
                         >
                             {{ $key }} 
                             {{ if not (isNil $meta) }}
-                            <span class="bg-gray-200 rounded py-1/2 px-1 text-sm font-mono">{{  $meta }}</span>
+                            <span class="bg-gray-200 rounded py-1/2 px-1 text-sm">{{  $meta }}</span>
                             {{ end }}
                         </div>
                     </a>
