--- a/appview/pages/templates/repo/pulls/pull.html
+++ b/appview/pages/templates/repo/pulls/pull.html
@@ -4,7 +4,6 @@
 {{ end }}
 
 {{ define "repoContent" }}
-
     <header class="pb-4">
         <h1 class="text-2xl">
             {{ .Pull.Title }}
@@ -17,7 +16,7 @@
 
     {{ if .Pull.State.IsOpen }}
         {{ $bgColor = "bg-green-600" }}
-        {{ $icon = "circle-dot" }}
+        {{ $icon = "git-pull-request" }}
     {{ else if .Pull.State.IsMerged }}
         {{ $bgColor = "bg-purple-600" }}
         {{ $icon = "git-merge" }}
@@ -91,6 +90,10 @@
                             type="button"
                             class="btn btn-sm"
                             onclick="togglePatchEdit(true)"
+                            {{ if or .Pull.State.IsMerged .Pull.State.IsClosed }}
+                                disabled title="Cannot edit closed or merged
+                                pull requests"
+                            {{ end }}
                         >
                             <i data-lucide="edit" class="w-4 h-4 mr-1"></i>Edit
                         </button>
@@ -147,54 +150,6 @@
             </script>
         </details>
     </div>
-
-    {{ if .MergeCheck }}
-        <div class="mt-4" id="merge-check">
-            <div
-                class="rounded-sm border p-4 {{ if .MergeCheck.IsConflicted }}
-                    bg-red-50 border-red-200
-                {{ else }}
-                    bg-green-50 border-green-200
-                {{ end }}"
-            >
-                <div
-                    class="flex items-center gap-2 rounded-sm {{ if .MergeCheck.IsConflicted }}
-                        text-red-500
-                    {{ else }}
-                        text-green-500
-                    {{ end }}"
-                >
-                    {{ if .MergeCheck.IsConflicted }}
-                        <i data-lucide="alert-triangle" class="w-4 h-4"></i>
-                        <span class="font-medium"
-                            >merge conflicts detected</span
-                        >
-                    {{ else }}
-                        <i data-lucide="check-circle" class="w-4 h-4"></i>
-                        <span class="font-medium">ready to merge</span>
-                    {{ end }}
-                </div>
-
-                {{ if .MergeCheck.IsConflicted }}
-                    <div class="mt-2">
-                        <ul class="text-sm space-y-1">
-                            {{ range .MergeCheck.Conflicts }}
-                                <li class="flex items-center">
-                                    <i
-                                        data-lucide="file-warning"
-                                        class="w-3 h-3 mr-1.5 text-red-500"
-                                    ></i>
-                                    <span class="font-mono"
-                                        >{{ slice .Filename 0 (sub (len .Filename) 2) }}</span
-                                    >
-                                </li>
-                            {{ end }}
-                        </ul>
-                    </div>
-                {{ end }}
-            </div>
-        </div>
-    {{ end }}
 {{ end }}
 
 {{ define "repoAfter" }}
@@ -239,12 +194,175 @@
             </div>
         {{ end }}
 
+        {{ if .Pull.State.IsMerged }}
+            <div
+                id="merge-status-card"
+                class="rounded relative bg-purple-50 border border-purple-200 p-4"
+            >
+                {{ if gt (len .Comments) 0 }}
+                    <div
+                        class="absolute left-8 -top-4 w-px h-4 bg-gray-300"
+                    ></div>
+                {{ else }}
+                    <div
+                        class="absolute left-8 -top-8 w-px h-8 bg-gray-300"
+                    ></div>
+                {{ end }}
+
+
+                <div class="flex items-center gap-2 text-purple-500">
+                    <i data-lucide="git-merge" class="w-4 h-4"></i>
+                    <span class="font-medium"
+                        >Pull request successfully merged</span
+                    >
+                </div>
+
+                <div class="mt-2 text-sm text-gray-700">
+                    <p>
+                        This pull request has been merged into the base branch.
+                    </p>
+                </div>
+            </div>
+        {{ else if .MergeCheck }}
+            <div
+                id="merge-status-card"
+                class="rounded relative {{ if .MergeCheck.IsConflicted }}
+                    bg-red-50 border border-red-200
+                {{ else }}
+                    bg-green-50 border border-green-200
+                {{ end }} p-4"
+            >
+                {{ if gt (len .Comments) 0 }}
+                    <div
+                        class="absolute left-8 -top-4 w-px h-4 bg-gray-300"
+                    ></div>
+                {{ else }}
+                    <div
+                        class="absolute left-8 -top-8 w-px h-8 bg-gray-300"
+                    ></div>
+                {{ end }}
+
+
+                <div
+                    class="flex items-center gap-2 {{ if .MergeCheck.IsConflicted }}
+                        text-red-500
+                    {{ else }}
+                        text-green-500
+                    {{ end }}"
+                >
+                    {{ if .MergeCheck.IsConflicted }}
+                        <i data-lucide="alert-triangle" class="w-4 h-4"></i>
+                        <span class="font-medium"
+                            >merge conflicts detected</span
+                        >
+                    {{ else }}
+                        <i data-lucide="check-circle" class="w-4 h-4"></i>
+                        <span class="font-medium">ready to merge</span>
+                    {{ end }}
+                </div>
+
+                {{ if .MergeCheck.IsConflicted }}
+                    <div class="mt-2">
+                        <ul class="text-sm space-y-1">
+                            {{ range .MergeCheck.Conflicts }}
+                                <li class="flex items-center">
+                                    <i
+                                        data-lucide="file-warning"
+                                        class="w-3 h-3 mr-1.5 text-red-500"
+                                    ></i>
+                                    <span class="font-mono"
+                                        >{{ slice .Filename 0 (sub (len .Filename) 2) }}</span
+                                    >
+                                </li>
+                            {{ end }}
+                        </ul>
+                    </div>
+                    <div class="mt-3 text-sm text-gray-700">
+                        <p>
+                            Please resolve these conflicts locally and update
+                            the patch to continue with the merge.
+                        </p>
+                    </div>
+                {{ else }}
+                    <div class="mt-2 text-sm text-gray-700">
+                        <p>
+                            No conflicts detected with the base branch. This
+                            pull request can be merged safely.
+                        </p>
+                    </div>
+                    {{ if and .LoggedInUser (eq .LoggedInUser.Did .RepoInfo.OwnerDid) }}
+                        <div class="mt-4 flex items-center gap-2">
+                            <form
+                                hx-post="/{{ .RepoInfo.FullName }}/pulls/{{ .Pull.PullId }}/merge"
+                                hx-swap="none"
+                            >
+                                <input
+                                    type="hidden"
+                                    name="targetBranch"
+                                    value="{{ .Pull.TargetBranch }}"
+                                />
+                                <input
+                                    type="hidden"
+                                    name="patch"
+                                    value="{{ .Pull.Patch }}"
+                                />
+                                <button
+                                    type="submit"
+                                    class="btn flex items-center gap-2"
+                                    {{ if or .Pull.State.IsClosed .MergeCheck.IsConflicted }}
+                                        disabled
+                                    {{ end }}
+                                >
+                                    <i
+                                        data-lucide="git-merge"
+                                        class="w-4 h-4 text-purple-500"
+                                    ></i>
+                                    <span>merge</span>
+                                </button>
+                            </form>
+
+                            {{ if or (eq .LoggedInUser.Did .Pull.OwnerDid) (eq .LoggedInUser.Did .RepoInfo.OwnerDid) }}
+                                {{ $action := "close" }}
+                                {{ $icon := "circle-x" }}
+                                {{ $hoverColor := "red" }}
+                                {{ if .Pull.State.IsClosed }}
+                                    {{ $action = "reopen" }}
+                                    {{ $icon = "circle-dot" }}
+                                    {{ $hoverColor = "green" }}
+                                {{ end }}
+                                <form
+                                    hx-post="/{{ .RepoInfo.FullName }}/pulls/{{ .Pull.PullId }}/{{ $action }}"
+                                    hx-swap="none"
+                                >
+                                    <button
+                                        type="submit"
+                                        class="btn flex items-center gap-2"
+                                    >
+                                        <i
+                                            data-lucide="{{ $icon }}"
+                                            class="w-4 h-4 text-{{ $hoverColor }}-400"
+                                        ></i>
+                                        <span>{{ $action }}</span>
+                                    </button>
+                                </form>
+                                <div id="pull-merge-error" class="error"></div>
+                                <div
+                                    id="pull-merge-success"
+                                    class="success"
+                                ></div>
+                            {{ end }}
+                        </div>
+                    {{ end }}
+                {{ end }}
+            </div>
+        {{ end }}
     </section>
 
     {{ if .LoggedInUser }}
         <form
             hx-post="/{{ .RepoInfo.FullName }}/pulls/{{ .Pull.PullId }}/comment"
             class="mt-8"
+            hx-swap="none"
         >
             <textarea
                 name="body"
@@ -256,7 +374,7 @@
         </form>
     {{ end }}
 
-    {{ if eq .LoggedInUser.Did .Pull.OwnerDid }}
+    {{ if and (or (eq .LoggedInUser.Did .Pull.OwnerDid) (eq .LoggedInUser.Did .RepoInfo.OwnerDid)) (not .MergeCheck) (not .Pull.State.IsMerged) }}
         {{ $action := "close" }}
         {{ $icon := "circle-x" }}
         {{ $hoverColor := "red" }}
@@ -268,8 +386,9 @@
         <form
             hx-post="/{{ .RepoInfo.FullName }}/pulls/{{ .Pull.PullId }}/{{ $action }}"
             hx-swap="none"
-            class="mt-8">
-            <button type="submit" class="btn hover:bg-{{ $hoverColor }}-300">
+            class="mt-8"
+        >
+            <button type="submit" class="btn text-sm flex items-center gap-2">
                 <i
                     data-lucide="{{ $icon }}"
                     class="w-4 h-4 mr-2 text-{{ $hoverColor }}-400"
@@ -278,4 +397,8 @@
             </button>
         </form>
     {{ end }}
+
+
+    <div id="pull-close"></div>
+    <div id="pull-reopen"></div>
 {{ end }}
